<resources>
    <string name="app_name">BLT</string>
    <string name="facebook_app_id">459841602603483</string>
    <string name="fb_login_protocol_scheme">fb459841602603483</string>
    <string name="hoten">NGUYỄN ĐẮC SƠN</string>
    <string name="email">dacson99bn@gmail.com</string>
    <string name="card_QuanLyPhong">Phòng</string>
    <string name="card_QuanLyNhanVien">Nhân viên</string>
    <string name="card_QuanLyDuAn">Dự án</string>
    <string name="card_APP">App</string>
    <string name="card_Thoat">Đăng Xuất</string>
    <string name="card_Lich">Lịch</string>
    <string name="txt_DangNhap">ĐĂNG NHẬP</string>
    <string name="caNhan">Cá nhân</string>
    <string name="hint_timkiem">Nhập tên cần tìm kiếm</string>
    <string name="todo">TODO</string>
    <string name="txt_danhsachphong">DANH SÁCH PHÒNG</string>
    <string name="txt_danhsachduan">DANH SÁCH DỰ ÁN</string>
    <string name="cus_danhsachnhanvien">DANH SÁCH NHÂN VIÊN</string>
    <string name="cus_quanlynhanvien">QUẢN LÝ NHÂN VIÊN</string>
    <string name="cus_themduan">THÊM DỰ ÁN</string>
    <string name="cus_themnhanvien">THÊM NHÂN VIÊN</string>
    <string name="cus_themphong">THÊM PHÒNG</string>
    <string name="cus_thongtinapp">THÔNG TIN APP</string>
    <string name="txt_MaDuAnDong">Mã dự án :</string>
    <string name="txt_TenDuAnDong">Tên dự án :</string>
    <string name="txt_MaNhanVienDong">Mã :</string>
    <string name="txt_HoTenNVDong">Họ tên :</string>
    <string name="txt_GioiTinhNVDong">Giới tính :</string>
    <string name="txt_SDTNVDong">SĐT :</string>
    <string name="txt_DiaChiNVDong">Địa chỉ :</string>
    <string name="txt_MaPhongDong">Mã phòng :</string>
    <string name="tenPhongDong">Tên phòng :</string>
    <string name="luuKhiThoat">Bạn có chắc chắn lưu??</string>
    <string name="btn_LuuKhiThoat">Xác nhận</string>
    <string name="btn_ThoatKhiThoat">Thoát</string>
    <string name="tenAPP">QUẢN LÝ NHÂN VIÊN</string>
    <string name="thongTinAPP">-Thông Tin APP</string>
    <string name="noiDungAPP">-Ứng dụng quản lý nhân viên dựa trên kiến thức môn android cơ bản của Trường Đại học Thủy Lợi. Ứng dụng quản lý nhân viên giúp quản lý được:Thông tin nhân viên: Họ tên, số điện thoại, mã nhân viên, mã phòng, thông tin phòng như mã tên phòng và rất nhiều chức năng hữu ích khác.</string>
    <string name="danhNhapAPP">- Đăng Nhập</string>
    <string name="noiDungDangNhapAPP">+Đăng ký, đăng nhập, đổi mật khẩu, lưu thông tin nhân viên</string>
    <string name="quanLyPhongAPP">-Quản lý phòng</string>
    <string name="xemDSPAPP">+ Xem danh sách phòng</string>
    <string name="themPhongAPP">+ Thêm, sửa, xóa phòng</string>
    <string name="timPhongAPP">+ Tìm kiếm phòng</string>
    <string name="xemPhongAPP">+ Chọn vào phòng xem được danh sách nhân viên của phòng đó</string>
    <string name="qlNVAPP">-Quản lý nhân viên</string>
    <string name="xemNVAPP">+ Xem danh sách nhân viên</string>
    <string name="themNVAPP">+ Thêm, sửa, xóa nhân viên</string>
    <string name="timNVAPP">+ Tìm kiếm nhân viên</string>
    <string name="anhNVAPP">+ Lấy ảnh trong thư mục ảnh nhân viên</string>
    <string name="duAnAPP">-Quản lý dự án</string>
    <string name="xemDAAPP">+ Xem danh sách dự án</string>
    <string name="themDAAPP">+ Thêm, sửa, xóa dự án</string>
    <string name="timDAAPP">+ Tìm kiếm dự án</string>
    <string name="txt_themPhong">THÊM PHÒNG</string>
    <string name="edit_MaPhongThem">Nhập mã phòng</string>
    <string name="edit_TenPhongthem">Nhập tên phòng</string>
    <string name="btn_LuuPhongThem">Lưu</string>
    <string name="btn_HuyPhongThem">Hủy</string>
    <string name="txt_ThemNVThem">THÊM NHÂN VIÊN</string>
    <string name="btn_ThemAnhNV">Thêm ảnh</string>
    <string name="edit_MaNhanVienThem">Mã nhân viên</string>
    <string name="edit_TenNhanVienThem">Tên nhân viên</string>
    <string name="edit_DiaChiNV">Địa chỉ</string>
    <string name="btn_ThemNV">Thêm</string>
    <string name="btn_HuyThemNV">Hủy</string>
    <string name="txt_ThemDuAn">THÊM DỰ ÁN</string>
    <string name="edit_MaDuAnThem">Nhập mã dự án</string>
    <string name="edit_TenDuAnThem">Nhập tên dự án</string>
    <string name="btn_ThemDuAn">Lưu</string>
    <string name="btn_HuyDuAn">Hủy</string>
    <string name="txt_QuanLyLoad">QUẢN LÝ NHÂN VIÊN</string>
    <string name="txt_DoiMatKhau">ĐỔI MẬT KHẨU</string>
    <string name="dangNhap">ĐĂNG NHẬP</string>
    <string name="nhapTaiKhoan">Nhập tài khoản</string>
    <string name="nhapMatKhau">Nhập mật khẩu</string>
    <string name="luuThongTin">Lưu thông tin</string>
    <string name="dangKy">ĐĂNG KÝ</string>
    <string name="txt_email">Email :</string>
    <string name="txt_DuANNVCT">Dự Án:</string>
    <string name="txt_QuayLaiCTNV">Quay Lại</string>
    <string name="txt_ThongTinCT">THÔNG TIN CHI TIẾT</string>
    <string name="txt_DangKy">ĐĂNG KÝ</string>
    <string name="txt_TaiKhoanDK">Nhập tên tài khoản</string>
    <string name="txt_MatKhauDK">Nhập mật khẩu</string>
    <string name="txt_EmailDK">Email</string>
    <string name="btn_DangKy">Đăng ký</string>
    <string name="btn_HuyDK">Hủy</string>
    <string name="txt_SuaPhong">SỬA PHÒNG</string>
    <string name="mota">Mô tả</string>
    <string name="taikhoan">Tài Khoản</string>
    <string name="matkhau">Mật Khẩu</string>
    <string name="luumatkhau">Lưu mật khẩu</string>
    <string name="dangnhap">Đăng Nhập</string>
    <string name="banchuacotaikhoan">Bạn chưa có tài khoản?</string>
    <string name="dangkyngay">Đăng ký ngay</string>
    <string name="xacnhanmatkhau">Xác nhận mật khẩu</string>
    <string name="dangkylayout">ĐĂNG KÝ</string>
    <string name="btn_dangky">ĐĂNG KÝ</string>
    <string name="btn_huy">Hủy</string>
    <string name="doimatkhau">ĐỔI MẬT KHẨU</string>
    <string name="matkhuacu">Mật khẩu cũ</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="btn_XacNhan">XÁC NHẬN</string>
    <string name="Diem">Điểm</string>
    <string name="thoat">Thoát</string>
    <string name="suaDuAn">SỬA DỰ ÁN</string>
    <string name="suaThongTin">SỬA THÔNG TIN</string>
    <string name="camera">CAMERA</string>
    <string name="hintGioiTinh4">Giới tính</string>
    <string name="hint_NgaySinh">Ngày sinh</string>
    <string name="hint_Email">Email</string>
    <string name="maDuAn">Mã dự án</string>
    <string name="maPhong">Mã phòng</string>
    <string name="tentaikhoan">Tên tài khoản</string>
    <string name="hoTen">Họ tên</string>
    <string name="soDienThoai">Số điện thoại</string>
    <string name="themNhanVien">THÊM NHÂN VIÊN</string>
    <string name="thongKe">THỐNG KÊ</string>
    <string name="thongKeNhanVien">Thống kê nhân viên</string>
    <string name="thongKeDuAn">Thống kê dự án</string>
    <string name="thongKePhong">Thống kê phòng</string>
    <string name="tenTaiKhoan">Tên tài khoản :</string>
    <string name="sdtthongtinchitiet">Số điện thoại :</string>

</resources>