<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativel_ThongTinAPP"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThongTinapp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_thongtinapp" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_sao"
            android:layout_weight="3"/>

        <TextView
            android:layout_weight="7"
            android:id="@+id/tvten"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_toRightOf="@id/imageView2"
            android:textColor="@color/black"
            android:text="@string/tenAPP"
            android:textSize="25dp"
            android:textStyle="bold"
            android:paddingLeft="10dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_below="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-20dp"
        android:layout_marginBottom="50dp"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/thongTinAPP"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/noiDungAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/danhNhapAPP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/noiDungDangNhapAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/quanLyPhongAPP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xemDSPAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/themPhongAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/timPhongAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xemPhongAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/qlNVAPP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xemNVAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/themNVAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/timNVAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/anhNVAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/duAnAPP"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="22dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/xemDAAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/themDAAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="30dp"
                android:layout_toRightOf="@id/imageView2"
                android:text="@string/timDAAPP"
                android:textColor="@color/black"
                android:textSize="20dp" />


        </LinearLayout>


    </ScrollView>
    <FrameLayout
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_TrangQuanLyAPPP"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_trangquanly"
            app:backgroundTint="#FF0000"
            app:fabSize="mini"
            tools:ignore="SpeakableTextPresentCheck" />
    </FrameLayout>


</RelativeLayout>